[build-system]
requires = [
	"flit_core >=3.2,<4",
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "kmeans"
authors = [{name = "Rochel Munitz", email = "Rochel.Munitz@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"
dependencies = [
    "pytest",
    "numpy"
]

[project.urls]
Home = "https://github.com/R-Munitz/HW5-NW.git"
